--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
 //    compile files('libs/muzei-api-2.0.jar')
 //    compile files('libs/muzei-api-2.0-javadoc.jar')
     compile 'com.google.android.apps.muzei:muzei-api:+'
+    compile 'org.jsoup:jsoup:1.10.3'
 }
