--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
 //    compile files('libs/muzei-api-2.0.jar')
 //    compile files('libs/muzei-api-2.0-javadoc.jar')
-    compile 'com.google.android.apps.muzei:muzei-api:+'
+    compile 'com.google.android.apps.muzei:muzei-api:2.+'
     compile 'org.jsoup:jsoup:1.10.3'
 }
