--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,9 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Sun Jan 14 19:15:18 CST 2018
+#Thu Feb 08 21:28:24 CST 2018
 systemProp.http.proxyHost=127.0.0.1
+systemProp.https.proxyPort=1080
 org.gradle.jvmargs=-Xmx1536m
+systemProp.https.proxyHost=127.0.0.1
 systemProp.http.proxyPort=1080
