--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext {
+        compileSdkVersion = 28
+        targetSdkVersion = 25
+
+        kotlinVersion = '1.3.11'
+        okhttpVersion = "3.10.0"
+        coreVersion = "1.1.0-alpha03"
+        workManagerVersion = "1.0.0-beta01"
+        archVersion = "1.1.1"
+    }
     repositories {
         jcenter()
         google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
